[gd_scene load_steps=20 format=3 uid="uid://1g4a3nglan2x"]

[ext_resource type="Script" uid="uid://d1phlt1x4nb8h" path="res://avatar creation/scenes/start.gd" id="1_gjvim"]
[ext_resource type="Texture2D" uid="uid://c2dprllf2sdx3" path="res://avatar creation/ui/Select user.jpg" id="2_f758u"]
[ext_resource type="FontFile" uid="uid://c1wcxniugtqaa" path="res://avatar creation/fonts/montserrat.regular.ttf" id="3_rtvxd"]
[ext_resource type="Texture2D" uid="uid://bwxrwppye25k4" path="res://avatar creation/ui/Teacher-Photoroom.png" id="4_5lh03"]
[ext_resource type="Texture2D" uid="uid://1cb5g231eig3" path="res://avatar creation/ui/Student-Photoroom.png" id="5_5t6e3"]
[ext_resource type="Texture2D" uid="uid://gm3otljtnf5b" path="res://avatar creation/ui/left_button.png" id="6_4dcle"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p5q7v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hotob"]
bg_color = Color(0.2, 0.11764706, 0.8117647, 0.59607846)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o3ac2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g636n"]
bg_color = Color(0.172549, 0.905882, 0.776471, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e6cqt"]
bg_color = Color(0.3647059, 0.24705882, 0.8117647, 0.4)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eox6m"]
bg_color = Color(0.3647059, 0.24705882, 0.8117647, 0.4)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cp1nj"]
bg_color = Color(0.3647059, 0.24705882, 0.8117647, 0.4)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_klnml"]
bg_color = Color(0.3647059, 0.24705882, 0.8117647, 0.4)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g5ukf"]
bg_color = Color(0.3647059, 0.24705882, 0.8117647, 0.4)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ewjsf"]
bg_color = Color(0.3647059, 0.24705882, 0.8117647, 0.4)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lu23f"]
bg_color = Color(0.172549, 0.905882, 0.776471, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_87di6"]
bg_color = Color(0.172549, 0.905882, 0.776471, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fxeog"]
bg_color = Color(0.3647059, 0.24705882, 0.8117647, 0.4)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="StudentTeacher" type="Node2D"]
script = ExtResource("1_gjvim")
metadata/_edit_vertical_guides_ = [835.0, 564.0, 1413.0]

[node name="ColorRect3" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.027451, 0.215686, 1)

[node name="ColorRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1600, 900)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -460.0
offset_top = -38.0
offset_right = 2153.0
offset_bottom = 1078.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_f758u")
expand_mode = 2
stretch_mode = 5

[node name="TeacherButton" type="Button" parent="."]
custom_minimum_size = Vector2(559.16, 60)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 178.0
offset_top = 261.0
offset_right = 737.16
offset_bottom = 790.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_rtvxd")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_p5q7v")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_hotob")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hotob")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_hotob")
theme_override_styles/hover = SubResource("StyleBoxFlat_hotob")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_hotob")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_hotob")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_hotob")
theme_override_styles/disabled = SubResource("StyleBoxFlat_hotob")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_hotob")
theme_override_styles/focus = SubResource("StyleBoxFlat_hotob")
icon = ExtResource("4_5lh03")
expand_icon = true

[node name="StudentButton" type="Button" parent="."]
custom_minimum_size = Vector2(559.16, 60)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 867.0
offset_top = 268.0
offset_right = 1426.1599
offset_bottom = 802.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_rtvxd")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_o3ac2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_g636n")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e6cqt")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_eox6m")
theme_override_styles/hover = SubResource("StyleBoxFlat_cp1nj")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_klnml")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_g5ukf")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_ewjsf")
theme_override_styles/disabled = SubResource("StyleBoxFlat_lu23f")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_87di6")
theme_override_styles/focus = SubResource("StyleBoxFlat_fxeog")
icon = ExtResource("5_5t6e3")
expand_icon = true

[node name="BackButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(61, 61)
offset_left = 60.0
offset_top = 50.0
offset_right = 121.0
offset_bottom = 111.0
texture_normal = ExtResource("6_4dcle")

[connection signal="pressed" from="TeacherButton" to="." method="_on_teacher_button_pressed"]
[connection signal="pressed" from="StudentButton" to="." method="_on_student_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
